more mass fixes

--- a/rotary-waterblast-tools/rotary-swivels.html
+++ b/rotary-waterblast-tools/rotary-swivels.html
@@ -43,8 +43,9 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="../contact.html">Contact Us</a></li>
-            <li><a href="request-catalog.html">Request a Catalog</a></li>
-            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+            <li><a href="../request-catalog.html">Request a Catalog</a></li>
+            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
+            <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
         </div>
@@ -214,7 +215,7 @@
                         <th>Maximum Pressure</th>
                         <td>15k psi</td>
                         <td><span class="metric">1000 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>50 gpm</td>
@@ -266,7 +267,7 @@
                         <th>Maximum Pressure</th>
                         <td>15k psi</td>
                         <td><span class="metric">1000 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>110 gpm</td>
@@ -318,7 +319,7 @@
                         <th>Maximum Pressure</th>
                         <td>22k psi</td>
                         <td><span class="metric">1500 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>50 gpm</td>
@@ -370,7 +371,7 @@
                         <th>Maximum Pressure</th>
                         <td>22k psi</td>
                         <td><span class="metric">1500 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>110 gpm</td>
@@ -422,7 +423,7 @@
                         <th>Maximum Pressure</th>
                         <td>15k psi</td>
                         <td><span class="metric">1000 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>50 gpm</td>
@@ -474,7 +475,7 @@
                         <th>Maximum Pressure</th>
                         <td>22k psi</td>
                         <td><span class="metric">1500 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>50 gpm</td>
@@ -542,7 +543,7 @@
                     <th>Maximum Pressure</th>
                     <td>15k psi</td>
                     <td><span class="metric">1000 bar</span
-                  </tr>
+                  ></tr>
                   <tr>
                     <th>Maximum Flow</th>
                     <td>50 gpm</td>
@@ -617,7 +618,7 @@
                         <th>Maximum Pressure</th>
                         <td>15k psi</td>
                         <td><span class="metric">1000 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>35 gpm</td>
@@ -669,7 +670,7 @@
                         <th>Maximum Pressure</th>
                         <td>22k psi</td>
                         <td><span class="metric">1500 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>25 gpm</td>
@@ -746,7 +747,7 @@
                         <th>Maximum Pressure</th>
                         <td>12k psi</td>
                         <td><span class="metric">830 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>300 gpm</td>
@@ -798,7 +799,7 @@
                         <th>Maximum Pressure</th>
                         <td>10k psi</td>
                         <td><span class="metric">700 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>600 gpm</td>
@@ -875,7 +876,7 @@
                         <th>Maximum Pressure</th>
                         <td>40k psi</td>
                         <td><span class="metric">2800 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>10 gpm</td>
@@ -928,7 +929,7 @@
                         <th>Maximum Pressure</th>
                         <td>44k psi</td>
                         <td><span class="metric">3000 bar</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Maximum Flow</th>
                         <td>20 gpm</td>
@@ -1054,7 +1055,7 @@
       </div>
       <div class="col-sm-2 col-centered">
         <a href="../waterblast-automation/powered-rotation-units.html"><img class="img-responsive" src="../assets/img/product/thumb-sg-e60-01.jpg" alt="Powered Rotation Units">
-        <h5>Powered Rotation Units</h5></a>
+        <h5>Powered Rotational Heads</h5></a>
       </div>
     </div>
   </section>
