--- a/waterblast-automation/bundle-blaster.html
+++ b/waterblast-automation/bundle-blaster.html
@@ -43,8 +43,9 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="../contact.html">Contact Us</a></li>
-            <li><a href="request-catalog.html">Request a Catalog</a></li>
-            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+            <li><a href="../request-catalog.html">Request a Catalog</a></li>
+            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
+            <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
         </div>
@@ -250,7 +251,7 @@ The StoneAge Bundle Blaster is a powerful and affordable automated solution for 
     <div class="row row-centered">
         <div class="col-sm-2 col-centered">
           <a href="powered-rotation-units.html"><img class="img-responsive" src="../assets/img/product/thumb-sg-e60-01.jpg" alt="Powered Rotational Heads">
-          <h5>Powered Rotation Units</h5></a>
+          <h5>Powered Rotational Heads</h5></a>
         </div>
         <div class="col-sm-2 col-centered">
           <a href="../rotary-waterblast-tools/rotary-swivels.html"><img class="img-responsive" src="../assets/img/product/swivel-01.jpg" alt="SG Rotary Swivels">
