--- a/waterblast-automation/floor-cleaner.html
+++ b/waterblast-automation/floor-cleaner.html
@@ -43,8 +43,9 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="../contact.html">Contact Us</a></li>
-            <li><a href="request-catalog.html">Request a Catalog</a></li>
-            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+            <li><a href="../request-catalog.html">Request a Catalog</a></li>
+            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
+            <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
         </div>
@@ -269,8 +270,8 @@
         <h5>Self-Rotary Heads</h5></a>
       </div>
       <div class="col-sm-2 col-centered">
-        <a href="../waterblast-automation/powered-rotation-units.html"><img class="img-responsive" src="../assets/img/product/thumb-sg-e60-01.jpg" alt="Powered Rotation Units">
-        <h5>Powered Rotation Units</h5></a>
+        <a href="../waterblast-automation/powered-rotation-units.html"><img class="img-responsive" src="../assets/img/product/thumb-sg-e60-01.jpg" alt="Powered Rotational Heads">
+        <h5>Powered Rotational Heads</h5></a>
       </div>
       <div class="col-sm-2 col-centered">
         <a href="../waterblast-automation/striker-remote-shotgunning.html"><img class="img-responsive" src="../assets/img/product/thumb-striker-02.jpg" alt="Striker remote shotgunning">
