--- a/waterblast-automation/powered-rotation-units.html
+++ b/waterblast-automation/powered-rotation-units.html
@@ -43,8 +43,9 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="../contact.html">Contact Us</a></li>
-            <li><a href="request-catalog.html">Request a Catalog</a></li>
-            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+            <li><a href="../request-catalog.html">Request a Catalog</a></li>
+            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
+            <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
         </div>
@@ -78,7 +79,7 @@
       <ul class="breadcrumb">
         <li><a href="../index.html">Home</i></a></li>
         <li><a href="../waterblast-tools-automated-equipment.html">Waterblast Tools &amp; Equipment</a></li>
-        <li class="active">Powered Rotation Units</li>
+        <li class="active">Powered Rotational Heads</li>
       </ul> 
     </div>
   </div>
@@ -103,17 +104,17 @@
       <!-- Product Info -->
       <div class="col-md-6 padding-left-60">
         <div class="product-heading">
-          <h1>Powered Rotation Units</h1>
+          <h1>Powered Rotational Heads</h1>
           <div class="dropdown product-social">
             <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i></span> Share</a>
             <ul class="dropdown-menu">
-              <li><a href="mailto:?subject=StoneAge Powered Rotation Units&body=Check out StoneAge Powered Rotation Units for surface cleaning: http://stoneagetools.com/waterblast-automation/powered-rotation-units.html">E-mail link</a></li>
+              <li><a href="mailto:?subject=StoneAge Powered Rotational Heads&body=Check out StoneAge Powered Rotational Heads for surface cleaning: http://stoneagetools.com/waterblast-automation/powered-rotation-units.html">E-mail link</a></li>
             </ul>
           </div>
         <div class="clearfix"></div>
         </div>
 
-        <p class="product-description">Powered Rotation Units control head rotation speeds and allow the use of a wide variety of head configurations for diverse cleaning applications. These units can be specified for up to 40k psi and various rotation speeds.</p>
+        <p class="product-description">Powered Rotational Heads control head rotation speeds and allow the use of a wide variety of head configurations for diverse cleaning applications. These units can be specified for up to 40k psi and various rotation speeds.</p>
 
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
           <div class="panel panel-default">
@@ -476,7 +477,7 @@
     <div class="container padding-tb-30">
       <div class="col-md-7">
 
-          <h2>Powered rotation units</h2>
+          <h2>Powered Rotational Heads</h2>
           <p>These surface cleaning accessories control head rotation speeds and allow the use of a wide variety of head configurations for diverse cleaning applications.</p>
       </div>
       <div class="col-md-4 col-md-offset-1">
