--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -41,7 +41,8 @@
           <ul class="list-inline">
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="request-catalog.html">Request a Catalog</a></li>
-            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
+            <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
         </div>
@@ -107,9 +108,8 @@
             <div class="list-group">
               <a href="#" class="list-group-item header">Automated Surface Cleaning</a>
               <a href="waterblast-automation/striker-remote-shotgunning.html" class="list-group-item">Striker<span class="label label-warning">New for 2016</span></a>
-              <a href="waterblast-automation/tunnel-cleaner.html" class="list-group-item">Tunnel Cleaner</a>
-              <a href="waterblast-automation/conveyor-cleaner.html" class="list-group-item">Conveyor Cleaner</a>
-              <a href="waterblast-automation/powered-rotation-units.html" class="list-group-item">Powered Rotation Units</a>
+              <a href="waterblast-automation/floor-cleaner.html" class="list-group-item">Floor Cleaner</a>
+              <a href="waterblast-automation/powered-rotation-units.html" class="list-group-item">Powered Rotational Heads</a>
               <a href="waterblast-automation/self-rotary-heads.html" class="list-group-item">Self-Rotating Heads</a>
             </div>
           </div>
@@ -141,16 +141,14 @@
               <a href="waterblast-automation/torus-tr-130.html" class="list-group-item">Torus TR-130</a>
               <a href="waterblast-automation/torus-tr-200.html" class="list-group-item">Torus TR-200</a>
               <a href="waterblast-automation/torus-positioning-booms.html" class="list-group-item">Torus Positioning Booms</a>
-              <a href="waterblast-automation/cyclone-backwall-cleaner.html" class="list-group-item">Cyclone Backwall Cleaner</a>
               <a href="waterblast-automation/sm-air-large-tank-cleaner.html" class="list-group-item">SM-AIR Large Tank Cleaner</a>
             </div>
           </div>
           <div class="col-sm-4 product-list">
             <div class="list-group">
               <a href="#" class="list-group-item header">Automated Furnace &amp; Boiler Cleaning</h4>
-              <a href="waterblast-automation/boiler-tube-cleaner.html" class="list-group-item">Boiler Tube Cleaner<span class="label label-info">Package Boilers</span</a>
+              <a href="waterblast-automation/boiler-tube-cleaner.html" class="list-group-item">Boiler Tube Cleaner<span class="label label-info">Package Boilers</span></a>
               <a href="waterblast-automation/yellow-jacket-boiler-cleaner.html" class="list-group-item">Yellow Jacket<span class="label label-info">Online Boiler Cleaning</span></a>
-              <a href="waterblast-automation/boiler-blaster.html" class="list-group-item">Boiler Blaster</a>
               <a href="waterblast-automation/cable-swivel-tool.html" class="list-group-item">Cable Swivel Tool</a>
               <a href="waterblast-automation/bfw-100-boiler-cleaner.html" class="list-group-item">Big Flow Waterlancer<span class="label label-info">Online Boiler Cleaning</span></a>
             </div>
