--- a/results-pipe-cleaning.html
+++ b/results-pipe-cleaning.html
@@ -41,7 +41,8 @@
           <ul class="list-inline">
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="request-catalog.html">Request a Catalog</a></li>
-            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
+            <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
         </div>
@@ -160,6 +161,18 @@
           <div class="media-body">
             <a href="rotary-waterblast-tools/bjv-centralizers.html"><h4 class="media-heading">BJV Centralizers</h4></a>
             Centralizers for cleaning large lines with BJV tools
+          </div>
+        </div>
+        
+        <div class="media">
+          <div class="media-left">
+            <a href="rotary-waterblast-tools/raptor-pipe-cleaning.html">
+              <img class="media-object" src="assets/img/product/thumb-rpt-02.jpg" alt="Raptor">
+            </a>
+          </div>
+          <div class="media-body">
+            <a href="rotary-waterblast-tools/gopher-tube-cleaning.html"><h4 class="media-heading">Raptor</h4></a>
+            Rotary tools for cleaning straight pipes
           </div>
         </div>
         
