--- a/waterblast-automation/outside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/outside-diameter-pipe-cleaner.html
@@ -43,8 +43,9 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="../contact.html">Contact Us</a></li>
-            <li><a href="request-catalog.html">Request a Catalog</a></li>
-            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+            <li><a href="../request-catalog.html">Request a Catalog</a></li>
+            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
+            <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
         </div>
@@ -259,7 +260,7 @@ with no wasted time</li>
         </div>
         <div class="col-sm-2 col-centered">
           <a href="powered-rotation-units.html"><img class="img-responsive" src="../assets/img/product/thumb-sg-e60-01.jpg" alt="Spitfire Rotary Shotgun Tools">
-          <h5>Powered Rotation Units</h5></a>
+          <h5>Powered Rotational Heads</h5></a>
         </div>
       </div>
     </div>
