--- a/waterblast-automation/self-rotary-heads.html
+++ b/waterblast-automation/self-rotary-heads.html
@@ -43,8 +43,9 @@
         <div class="col-sm-8 utils">
           <ul class="list-inline">
             <li><a href="../contact.html">Contact Us</a></li>
-            <li><a href="request-catalog.html">Request a Catalog</a></li>
-            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li><li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
+            <li><a href="../request-catalog.html">Request a Catalog</a></li>
+            <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
+            <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
             <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
           </ul>
         </div>
@@ -293,11 +294,11 @@
       </div>
       <div class="col-sm-2 col-centered">
         <a href="powered-rotation-units.html"><img class="img-responsive" src="../assets/img/product/thumb-sg-e60-01.jpg" alt="Powered Rotational Heads">
-        <h5>Powered Rotation Units</h5></a>
+        <h5>Powered Rotational Heads</h5></a>
       </div>
       <div class="col-sm-2 col-centered">
-        <a href="../waterblast-automation/conveyor-cleaner.html"><img class="img-responsive" src="../assets/img/product/thumb-conveyor-02.jpg" alt="Conveyor Cleaner">
-        <h5>Conveyor Cleaner</h5></a>
+        <a href="../waterblast-automation/floor-cleaner.html"><img class="img-responsive" src="../assets/img/product/thumb-fcsv-01.jpg" alt="Floor Cleaner">
+        <h5>Floor Cleaner</h5></a>
       </div>
     </div>
   </section>
@@ -308,7 +309,7 @@
     <div class="container padding-tb-30">
       <div class="col-md-7">
 
-          <h2>Powered rotation units</h2>
+          <h2>Powered Rotational Heads</h2>
           <p>These surface cleaning accessories control head rotation speeds and allow the use of a wide variety of head configurations for diverse cleaning applications.</p>
       </div>
       <div class="col-md-4 col-md-offset-1">
