--- a/results-furnace-boiler-cleaning.html
+++ b/results-furnace-boiler-cleaning.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>StoneAge Working</title>
+  <title>StoneAge Furnace and Boiler Cleaning Equipment</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Fonts -->
@@ -101,18 +101,6 @@
           <div class="media-body">
             <a href="waterblast-automation/yellow-jacket-boiler-cleaner.html"><h4 class="media-heading">Yellow Jacket</h4></a>
             High flow online boiler cleaning sytem
-          </div>
-        </div>
-        
-        <div class="media">
-          <div class="media-left">
-            <a href="waterblast-automation/boiler-blaster.html">
-              <img class="media-object" src="assets/img/product/thumb-boiler-blaster-02.jpg" alt="Boiler Blaster economizer cleaning">
-            </a>
-          </div>
-          <div class="media-body">
-            <a href="waterblast-automation/boiler-blaster.html"><h4 class="media-heading">Boiler Blaster</h4></a>
-            Surface cleaning system for boiler economizers and air pre-heater exchangers
           </div>
         </div>
         
