--- a/waterblast-automation/torus-tr-200.html
+++ b/waterblast-automation/torus-tr-200.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>StoneAge Working</title>
+  <title>StoneAge Torus TR-200 3D Tank and Vessel Cleaning</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Fonts -->
