--- a/rotary-waterblast-tools/gopher-tube-cleaning.html
+++ b/rotary-waterblast-tools/gopher-tube-cleaning.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>StoneAge Working</title>
+  <title>StoneAge Gopher Pipe Cleaning Tools</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Fonts -->
