--- a/sewer-tools-nozzles/warthog-wh.html
+++ b/sewer-tools-nozzles/warthog-wh.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>StoneAge Working</title>
+  <title>Warthog WH Sewer Nozzles by StoneAge</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Fonts -->
