--- a/waterblast-automation/autobox-abx-500.html
+++ b/waterblast-automation/autobox-abx-500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>StoneAge Working</title>
+  <title>StoneAge AutoBox ABX-500 Hose Control for Pipe and Vessel Cleaning</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Fonts -->
