--- a/waterblast-automation/self-rotary-heads.html
+++ b/waterblast-automation/self-rotary-heads.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>StoneAge Working</title>
+  <title>StoneAge Self-Rotary Surface Cleaning Heads</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Fonts -->
