--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -234,6 +234,7 @@
               <a href="#" class="list-group-item header">Waterblast Accessories</h4>
               <a href="rotary-waterblast-tools/nozzles-extensions.html" class="list-group-item">Nozzles and Extensions</a>
               <a href="rotary-waterblast-tools/backout-prevention.html" class="list-group-item">Backout Prevention</a>
+              <a href="rotary-waterblast-tools/hose-storage-reel.html" class="list-group-item">Hose Storage Reel</a>
             </div>
           </div>
         </div>
