--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -96,7 +96,7 @@
             <div class="ms-slide">
               <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-01.jpg" alt="Banshee rotary tube cleaning nozzles">
               <img class="ms-thumb" src="../assets/img/product/thumb-banshee-01.jpg" alt="thumb">
-                <a data-type="video" href="https://www.youtube.com/embed/mSRf2yelD0I"> </a>
+<!--                <a data-type="video" href="https://www.youtube.com/embed/mSRf2yelD0I"> </a>-->
             </div>
             <div class="ms-slide">
               <img src="../assets/img/blank.gif" data-src="../assets/img/product/banshee-02.jpg" alt="Banshee rotary tube lancing nozzles">
@@ -969,9 +969,6 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                <div class="col-sm-6">
-                  <iframe width="220" height="120" src="https://www.youtube.com/embed/mSRf2yelD0I" frameborder="0" allowfullscreen></iframe><p class="caption">Banshee Overview Video</p>
-                </div>
                 <div class="col-sm-6">
                     <iframe width="220" height="120" src="https://www.youtube.com/embed/cWRA6gtS2qI" frameborder="0" allowfullscreen></iframe><p class="caption">Banshee Maintenance Video</p>
                 </div>
