--- a/rotary-waterblast-tools/raptor-pipe-cleaning.html
+++ b/rotary-waterblast-tools/raptor-pipe-cleaning.html
@@ -139,7 +139,8 @@ in diameter. The Raptor uses viscous fluid speed control and operates with 2, 4,
               <div class="panel-body">
                 <ul>
                   <li>High flow range aids in removing thick, tough deposits</li>
-                  <li>Controlled rotation for longer jet dwell times for difficult depositsMultiple jetting options allows for fine tuning heads to optimize cleaning</li>
+                  <li>Controlled rotation for longer jet dwell times for difficult deposits</li>
+                  <li>Multiple jetting options allows for fine tuning heads to optimize cleaning</li>
                   <li>Optional pull ring connection aids in jobs where tool needs to be pulled
 through the pipe</li>
                   <li>Multiple head options available</li>
