--- a/contact.html
+++ b/contact.html
@@ -117,11 +117,11 @@
                   +1 (281) 888-5069 <br>
                   <a href="mailto:sales@stoneagetools.com" class="">sales@stoneagetools.com</a>
                 </address>
-                <p class="small">Monday to Friday 8:00am&ndash;5:00pm MST</p>
+                <p class="small">Monday to Friday 8:00am&ndash;5:00pm CST</p>
               </div>
               <div class="col-sm-4 contact-method">
                 <h2><i class="fa fa-paper-plane"></i><br/>Email Us</h2>
-                <form method="post" action="http://formspree.io/your@email.com" name="contactform" id="contactform">
+                <form method="post" action="http://formspree.io/margaret.babiarz@stoneagetools.com" name="contactform" id="contactform">
                   <fieldset>
                     <input name="name" type="text" id="name" class="form-control" size="30" placeholder="Name">
                     <br>
@@ -137,6 +137,8 @@
                   </fieldset>
                   <fieldset>
                     <button type="submit" class="btn btn-lg btn-block" id="submit" value="Submit">Send Message</button>
+                    <input type="hidden" name="_next" value="email-thanks.html" />
+                    <input type="hidden" name="_subject" value="New web contact form submission!" />
                 </fieldset>
               </form>
               </div> 
