--- a/email-thanks.html
+++ b/email-thanks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>StoneAge Waterblast and Sewer Product Catalog Request</title>
+  <title>StoneAge High Pressure Waterblast Tools Automated Equipment</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Fonts -->
@@ -72,61 +72,23 @@
   
   <div class="fluid-container landing-nav">
     <div class="container">
-      <h1 class="page-heading">Request a Catalog</h1>
+      <h1 class="page-heading text-center">Thank you for contacting us</h1>
     </div>
   </div>
 
-  <section class="container padding-tb-30">
-    <div class="col-sm-7">
-      <p>Please fill out the request below to receive printed issues of our current tool catalogs:</p>
-      <form method="post" action="http://formspree.io/margaret.babiarz@stoneagetools.com" name="catalog-request" id="contactform">
-        <fieldset>
-          <input name="name" type="text" id="name" size="30" placeholder="Name" class="form-control">
-          <br>
-          <input name=company type="text" id="company" size="30" placeholder="Company" class="form-control">
-          <br>
-          <input name="address1" type="text" id="address1" size="30" placeholder="Street Address" class="form-control">
-          <br>
-          <input name="address2" type="text" id="address2" size="30" placeholder="Street Address Line 2" class="form-control">
-          <br>
-          <input name="state" type="text" id="state" size="30" placeholder="State/Province" class="form-control">
-          <input name="city" type="text" id="city" size="30" placeholder="City" class="form-control">
-          <br>
-          <input name="country" type="text" id="country" size="30" placeholder="Country" class="form-control">
-          <br>
-          <input name="email" type="email" id="email" size="30" placeholder="Email" class="form-control">
-          <br>
-          <input name="phone" type="text" id="phone" size="30" placeholder="Phone" class="form-control">
-          <br>
-        </fieldset>
-        <fieldset class="checkbox">
-          <label>Which catalog would you like?</label>
-          <input type="checkbox" name="wb-catalog" value="Waterblast Tools Catalog"> <span>Waterblast Tools</span>
-          <input type="checkbox" name="sw-catalog" value="Sewer Tools Catalog"> <span>Sewer Tools</span>
-        </fieldset>
-        <fieldset>
-          <textarea name="comments" cols="40" rows="5" id="comments" placeholder="Additional Instructions"></textarea>
-        </fieldset>
-        <fieldset>
-          <button type="submit" class="btn btn-lg btn-block" id="submit" value="Submit">Send Request</button>
-          <input type="hidden" name="_next" value="email-thanks.html" />
-                    <input type="hidden" name="_subject" value="New catalog request from web!" />
-        </fieldset>
-      </form>
-    </div>
-    
-    <div class="col-sm-3 col-sm-offset-1">
-      <h2 class="section-heading">Product Catalogs</h2>
-      <div class="row margin-bottom-30">
-        <a href=product-catalogs.html><img src="assets/img/catalog_cover_wb_2016.jpg" class="img-responsive" alt="2016 StoneAge Waterblast Tools Catalog">
-        </a>
-      </div>
-      <div class="row margin-bottom-30">
-        <a href=product-catalogs.html><img src="assets/img/warthog_catalog_cover_2014.jpg" class="img-responsive" alt="2016 StoneAge Waterblast Tools Catalog">
-        </a>
-      </div>
-    </div>
+  <section class="container padding-tb-30 margin-bottom-120">
+    <div class="col-sm-12 text-center">
+      <h1 class="thin grey spaced margin-bottom-30 width-60">Your e-mail has been sent.</h1>
+      <h3 class="width-60">We will reply promptly to your request.</h3>
   </section>
+  
+  <!-- Footer CTA -->
+  <div class="row footer-cta">
+    <div class="container">
+      <a href="contact.html">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
+    </div>
+  </div>
+  <!-- End Footer CTA -->
   
   <!-- Footer -->
   <footer>
@@ -197,7 +159,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="assets/js/custom.js"></script>
-
+  
   <!-- Start of Async HubSpot Analytics Code -->
   <script type="text/javascript">
     (function(d,s,i,r) {
