--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       <div class="section-heading">
         <h2>Events</h2>
       </div>
-      <a href="http://wwettshow.com/" target="_blank"><img src="http://www.stoneagetools.com/images/upcoming_events_wwett2016.jpg" class="img-responsive"/></a>
+      <a href="http://wwettshow.com/" target="_blank"><img src="assets/img/thumb/upcoming_events_wwett2016.jpg" class="img-responsive"/></a>
       <div class="caption">
       <h4><a href="http://wwettshow.com/" target="_blank">2016 WWETT Show</a></h4>
       <p>The world’s largest annual trade show for environmental service professionals, the WWETT Show offers the latest products, technologies, and knowledge related to the water, wastewater and environmental service industry.</p>
