--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -282,7 +282,7 @@ or plastic to withstand corrosive environments</li>
         </div>
 -->
         <div class="col-sm-2 col-centered">
-          <a href="#"><img class="img-responsive" src="../assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
+          <a href="../rotary-waterblast-tools/banshee-tube-cleaners.html"><img class="img-responsive" src="../assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
           <h5>Banshee Rotary Tools</h5></a>
         </div>
       </div>
