--- a/waterblast-automation/prodrive-hose-feed.html
+++ b/waterblast-automation/prodrive-hose-feed.html
@@ -100,6 +100,10 @@
                 <a data-type="video" href="https://www.youtube.com/embed/8ycXXbtS7zw"> </a>
             </div>
             <div class="ms-slide">
+              <img src="../assets/img/blank.gif" data-src="../assets/img/product/prodrive-03.jpg" alt="StoneAge ProDrive remote controlled pipe cleaning">
+              <img class="ms-thumb" src="../assets/img/product/thumb-prodrive-03.jpg" alt="thumb">
+            </div>
+            <div class="ms-slide">
               <img src="../assets/img/blank.gif" data-src="../assets/img/product/prodrive-02.jpg" alt="StoneAge ProDrive remote controlled pipe cleaning">
               <img class="ms-thumb" src="../assets/img/product/thumb-prodrive-02.jpg" alt="thumb">
             </div>
@@ -423,6 +427,17 @@
     })(document,"script","hs-analytics",300000);
   </script>
   <!-- End of Async HubSpot Analytics Code --> 
+
+  <!-- Start Google Analytics Code -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-19225233-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <!-- End Google Analytics Code -->
 
 </body>
 </html>
